Fixed carousel text/buttons being offcenter or different heights

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -3,18 +3,12 @@ $offset: 5rem;
 // ! Might need to change the way this is done so it can be dynamic
 
 .hero {
-    position: relative;
     height: 100vh;
     padding-top: 4rem;
-    display: flex;
     overflow: hidden;
+    display: flex;
     flex-direction: column;
     justify-content: center;
-
-    &__card-container {
-        width: fit-content;
-        height: fit-content;
-    }
 
     &__title-container {
         height: fit-content;
@@ -35,11 +29,18 @@ $offset: 5rem;
     }
 
     &__carousel {
+        display: block;
+        position: relative;
         z-index: 1;     
+
+        &-titles {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
 
         &-text {
             display: none;
-            opacity: 0;
 
             &.active {
                 display: block;
@@ -48,12 +49,13 @@ $offset: 5rem;
             }
         }
 
-        &-list {
+        &-buttons {
             display: flex;
             justify-content: center;
             align-items: center;
             gap: 1rem;
             list-style-type: none;
+            padding: 0;
         }
 
         &-button {
@@ -71,21 +73,6 @@ $offset: 5rem;
             background-color: red;
         }
     }
-
-    &-carousel {
-        &--titles {
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-
-        &--buttons {
-        }
-    }
-
-        
 
     &__cards-wrapper {
         display: grid;
@@ -113,6 +100,11 @@ $offset: 5rem;
         > .hero__card-container:nth-child(7n + 4) {
             transform: translateY(calc($offset*3))
         }
+    }
+
+    &__card-container {
+        width: fit-content;
+        height: fit-content;
     }
 
     @keyframes slideUp {
